--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LDPH1RYB7C"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-LDPH1RYB7C');
+</script>
   <head>
     <meta charset="utf-8">
     <title>{{title}}</title>
